--- a/hachetemeles/stylehseetairbnb.css
+++ b/hachetemeles/stylehseetairbnb.css
@@ -13,6 +13,7 @@
     margin-top: 24px;
     margin-right: 6px;
     margin-left: 148px;
+    align-items: center;
     background-image: url("Airbnb-Logotipo.jpg");
     background-color: black;
     background-position: center;
@@ -22,12 +23,13 @@
 .letras_header {
     float: left;
     margin-top: 12px;
-    padding: 12px 0;
+    padding: 12px;
     color: rgb(0, 0, 0);
     font-size: 24px;
     font-weight: 500;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
+    align-items: center;
 }
 .menu_header{
     list-style-type: none;
@@ -48,57 +50,64 @@
 #imagencentral{
     display: inline-block;
     margin-top: 10px;
-    width: 2500px;
+    width: 100%
 }
 .imagen{
-    width: 1903px;
-    height: 818.28px;
+    width: 100%;
+    
     image-resolution: 600dpi;
 }
 .about_us_header{
     margin-top: 50px;
-    text-align: center;
 }
 .h1{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 32px;
     font-weight: 600;
-    margin-right: 840px;
+    margin-left: calc(35% + 10px);
 }
 .texto_about_us{
+    width: 100%;
     max-width: 680px;
-    margin-left: 475px;
+    margin-left: calc(35% + 10px);
+}
+.parrafo_airbnb{
+    width: 75%;
 }
 body{
     margin-top: 10px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 1.5;
     text-align: justify;
+}
+#facts{
+    width: 100%;
 }
 .fast_facts_founders_header{
     margin-top: 40px;
 }
 .fast_facts_tarjetas{
-    display: flex;
-    margin-top: 20px;
-}
-#tarjetas_superior{
-    display: flex;
-    position: relative;
+    margin-left: 15%;
+    margin-right: 5%;
+    background-color: #ddd;
+}  
+.founder_tarjetas{
     margin-left: 170px;
 }
-#tarjetas_inferior{
-    display: flex;
-    position: relative;
-    margin-top: 300px;
-    margin-left: -1615px;
-}   
+.founders_header{
+    margin-top: 40px; 
+
+}
 .tarjeta{
-    margin: 10px 35px 10px 40px;
-    padding: 10px 10px 10px 10px;
-    width: 310px;
+    display: inline-block;
+    margin: 13px;
+    padding: 15px;
+    width: 20%;
+    vertical-align: top;
     height: 200px;
+    border: 12px;
+    border-radius: 12px;
 }
 .h2{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -110,7 +119,15 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 32px;
     font-weight: 600;
-    margin-left: 200px;
+    margin-left: 15%;
+    margin-right: 5%;    
+    background-color: #ddd;
+}
+.founder{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 32px;
+    font-weight: 600;
+    margin-left: 170px;
 }
 .h3{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -123,7 +140,9 @@ body{
     font-size: 11px;
 }
 .imagen_founder{
-    height: 530px;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
     border: hidden;
     border-radius: 10px;
 }
@@ -136,28 +155,38 @@ body{
     font-size: 16px;
     font-weight: 600;
     line-height: 1.5;
+    
 }
 .pie_founder > a{
     text-decoration-line: none;
     color: black;
 }
-
 .pie_founder > a:hover{
     text-decoration: underline!important;
 }
-
+.pie_founder p{
+    margin-left: 0px;
+}
 #tarjetas_founders{
-    display: inline-flex;
-    position: relative;
-    margin-left: 90px;
+    display: flex;
+    width: 100%;
+    margin-left: -30px;
 }
 .tarjeta_founder{
-    margin: 10px 75px 10px 105px;
-    width: 370px;
-    height: 600px;
+    display: inline-block;
+    margin: 13px;
+    padding: 15px;
+    width: 100%;
+    vertical-align: top;
+    border: 12px;
+    border-radius: 12px;
 }
 .year{
     display: flex;
     float: right;
     padding: 0px 15px 10px 0px;
+}
+#contenedor2{
+    margin-left: 2%;
+    margin-right: 0%;
 }
