--- a/hachetemeles/stylehseetairbnb.css
+++ b/hachetemeles/stylehseetairbnb.css
@@ -88,7 +88,7 @@ body{
     margin-top: 40px;
 }
 .fast_facts_tarjetas{
-    margin-left: 15%;
+    margin-left: 10%;
     margin-right: 5%;
     background-color: #ddd;
 }  
@@ -119,7 +119,7 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 32px;
     font-weight: 600;
-    margin-left: 15%;
+    margin-left: 10%;
     margin-right: 5%;    
     background-color: #ddd;
 }
@@ -170,7 +170,7 @@ body{
 #tarjetas_founders{
     display: flex;
     width: 100%;
-    margin-left: -30px;
+    margin-left: 0px;
 }
 .tarjeta_founder{
     display: inline-block;
@@ -187,6 +187,5 @@ body{
     padding: 0px 15px 10px 0px;
 }
 #contenedor2{
-    margin-left: 2%;
-    margin-right: 0%;
+    display: inline-block;
 }
